--- a/test.yml
+++ b/test.yml
@@ -1,12 +1,13 @@
+settings:
+  default-executor: siege
+
 execution:
-- concurrency: 10
+- concurrency: 100
   ramp-up: 1m
-  hold-for: 1m30s
-  scenario: simple
+  hold-for: 5m
+  scenario: quick-test
 
 scenarios:
-  simple:
-    think-time: 0.75
+  quick-test:
     requests:
-    - http://blazedemo.com/
-    - http://blazedemo.com/vacation.html
+    - https://www.qa.rent.com/
