start trying to return xml

--- a/test.yml
+++ b/test.yml
@@ -11,3 +11,11 @@ scenarios:
   quick-test:
     requests:
     - https://www.qa.rent.com/
+
+reporting:
+- module: final-stats
+  summary: true
+  percentiles: true
+  failed-labels: false
+  test-duration: true
+  dump-xml: stats.xml
